# mockstack

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish-docs.yml  publish-to-dockerhub.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-package.yml
configuration/: index.html
docs/: configuration.md  index.md  widgets-examples.md
docs/strategies/: filefixtures.md
examples/filefixtures-with-templates/: README.md
examples/llm/: mockstack-langchain-example.ipynb
examples/llm/templates/: ollama-openai-v1-chat-completions.j2
mockstack/: config.py  display.py  exceptions.py  identifiers.py  intent.py  lifespan.py  main.py  middleware.py  opentelemetry.py  telemetry.py  templating.py
mockstack/llm/: ollama.py
mockstack/routers/: catchall.py
mockstack/strategies/: base.py  chaosmonkey.py  factory.py  filefixtures.py  proxyrules.py
mockstack/tests/: conftest.py  test_display.py  test_identifiers.py  test_intent.py  test_middleware.py  test_proxyrules.py  test_telemetry.py  test_templating.py
mockstack/tests/llm/: test_ollama.py
mockstack/tests/routers/: test_catchall.py  test_homepage.py
mockstack/tests/strategies/: test_filefixtures.py  test_proxyrules.py
ollama/: index.html
search/: search_index.json
strategies/base/: index.html
strategies/filefixtures/: index.html
strategies/proxyrules/: index.html
