[project]
name = "mockstack"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-distro>=0.53b1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-sdk>=1.32.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["I"]
